DIT-1959 fixed spacing issue added the top border and move h3 out of the dl

--- a/app/assets/stylesheets/activity.scss
+++ b/app/assets/stylesheets/activity.scss
@@ -15,3 +15,15 @@
   word-wrap: break-word;      /* IE */
   word-break: break-all;
 }
+
+/* liability view css added to match with the prototype */
+#liability_tabs .cya-question {
+    padding: 10px 20px 10px 0;
+}
+#liability_tabs .govuk-check-your-answers {
+    border-top: 1px solid #bfc1c3;
+}
+#liability_tabs h3 {
+    margin-bottom: 10px;
+}
+/* End */
